--- a/module_order/src/main/res/layout/order_frag_myorder.xml
+++ b/module_order/src/main/res/layout/order_frag_myorder.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+
+<layout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <variable name="viewModel" type="com.lcworld.module_order.bean.OrderListViewModel"/>
+    </data>
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_order"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:listitem="@layout/order_item_myorder" />
-</LinearLayout>
+            android:id="@+id/rv_order"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:listitem="@layout/order_item_myorder"/>
+</layout>
