--- a/library_res/src/main/res/values/font_styles.xml
+++ b/library_res/src/main/res/values/font_styles.xml
@@ -15,6 +15,11 @@
         <item name="android:textSize">13sp</item>
     </style>
 
+    <style name="exchange_text_13_999999">
+        <item name="android:textColor">#999999</item>
+        <item name="android:textSize">13sp</item>
+    </style>
+
     <style name="exchange_text_13_666666">
         <item name="android:textColor">#666666</item>
         <item name="android:textSize">13sp</item>
@@ -57,8 +62,19 @@
         <item name="android:textSize">15sp</item>
     </style>
 
+    <style name="exchange_text_15_999999">
+        <item name="android:textColor">#999999</item>
+        <item name="android:textSize">15sp</item>
+    </style>
+
     <style name="exchange_text_15_FFFFFF_b">
         <item name="android:textColor">#FFFFFF</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="exchange_text_15_999999_b">
+        <item name="android:textColor">#999999</item>
         <item name="android:textSize">15sp</item>
         <item name="android:textStyle">bold</item>
     </style>
